// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test adding custom config 1`] = `
Object {
  "Parameters": Object {
    "AssetParametersc46c7366cefb47f1220c481b29a240b7f8c9e7379ea091a44659ba5cd447844bArtifactHashFBDA4305": Object {
      "Description": "Artifact hash for asset \\"c46c7366cefb47f1220c481b29a240b7f8c9e7379ea091a44659ba5cd447844b\\"",
      "Type": "String",
    },
    "AssetParametersc46c7366cefb47f1220c481b29a240b7f8c9e7379ea091a44659ba5cd447844bS3BucketE78D10C6": Object {
      "Description": "S3 bucket for asset \\"c46c7366cefb47f1220c481b29a240b7f8c9e7379ea091a44659ba5cd447844b\\"",
      "Type": "String",
    },
    "AssetParametersc46c7366cefb47f1220c481b29a240b7f8c9e7379ea091a44659ba5cd447844bS3VersionKey566E3647": Object {
      "Description": "S3 key for asset version \\"c46c7366cefb47f1220c481b29a240b7f8c9e7379ea091a44659ba5cd447844b\\"",
      "Type": "String",
    },
    "AssetParametersde5d53507ab3a110ffde286fac3114254159d7aa1f554b5543e27f5a8557b1cbArtifactHash14857245": Object {
      "Description": "Artifact hash for asset \\"de5d53507ab3a110ffde286fac3114254159d7aa1f554b5543e27f5a8557b1cb\\"",
      "Type": "String",
    },
    "AssetParametersde5d53507ab3a110ffde286fac3114254159d7aa1f554b5543e27f5a8557b1cbS3Bucket7DD7C704": Object {
      "Description": "S3 bucket for asset \\"de5d53507ab3a110ffde286fac3114254159d7aa1f554b5543e27f5a8557b1cb\\"",
      "Type": "String",
    },
    "AssetParametersde5d53507ab3a110ffde286fac3114254159d7aa1f554b5543e27f5a8557b1cbS3VersionKey169EA89B": Object {
      "Description": "S3 key for asset version \\"de5d53507ab3a110ffde286fac3114254159d7aa1f554b5543e27f5a8557b1cb\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "TestConfigDFE7B72C": Object {
      "Properties": Object {
        "CompatibleRuntimes": Array [
          "nodejs14.x",
        ],
        "Content": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersde5d53507ab3a110ffde286fac3114254159d7aa1f554b5543e27f5a8557b1cbS3Bucket7DD7C704",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersde5d53507ab3a110ffde286fac3114254159d7aa1f554b5543e27f5a8557b1cbS3VersionKey169EA89B",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersde5d53507ab3a110ffde286fac3114254159d7aa1f554b5543e27f5a8557b1cbS3VersionKey169EA89B",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer configures AWS Node SDK initialization",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "TestConfigPythonLibLayer672F8799": Object {
      "Properties": Object {
        "CompatibleRuntimes": Array [
          "python3.8",
        ],
        "Content": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersc46c7366cefb47f1220c481b29a240b7f8c9e7379ea091a44659ba5cd447844bS3BucketE78D10C6",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersc46c7366cefb47f1220c481b29a240b7f8c9e7379ea091a44659ba5cd447844bS3VersionKey566E3647",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersc46c7366cefb47f1220c481b29a240b7f8c9e7379ea091a44659ba5cd447844bS3VersionKey566E3647",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer has boto config initialization and logging functions",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
  },
}
`;

exports[`visting node lambda runtimes and adding aspects 1`] = `
Object {
  "Parameters": Object {
    "AssetParametersbac4548d66295d0afd8c4a6ab48b825793fb3b080a587e52c65d66c0892896bdArtifactHashFDCFD785": Object {
      "Description": "Artifact hash for asset \\"bac4548d66295d0afd8c4a6ab48b825793fb3b080a587e52c65d66c0892896bd\\"",
      "Type": "String",
    },
    "AssetParametersbac4548d66295d0afd8c4a6ab48b825793fb3b080a587e52c65d66c0892896bdS3BucketEC06255A": Object {
      "Description": "S3 bucket for asset \\"bac4548d66295d0afd8c4a6ab48b825793fb3b080a587e52c65d66c0892896bd\\"",
      "Type": "String",
    },
    "AssetParametersbac4548d66295d0afd8c4a6ab48b825793fb3b080a587e52c65d66c0892896bdS3VersionKey9B645B6A": Object {
      "Description": "S3 key for asset version \\"bac4548d66295d0afd8c4a6ab48b825793fb3b080a587e52c65d66c0892896bd\\"",
      "Type": "String",
    },
    "AssetParametersc46c7366cefb47f1220c481b29a240b7f8c9e7379ea091a44659ba5cd447844bArtifactHashFBDA4305": Object {
      "Description": "Artifact hash for asset \\"c46c7366cefb47f1220c481b29a240b7f8c9e7379ea091a44659ba5cd447844b\\"",
      "Type": "String",
    },
    "AssetParametersc46c7366cefb47f1220c481b29a240b7f8c9e7379ea091a44659ba5cd447844bS3BucketE78D10C6": Object {
      "Description": "S3 bucket for asset \\"c46c7366cefb47f1220c481b29a240b7f8c9e7379ea091a44659ba5cd447844b\\"",
      "Type": "String",
    },
    "AssetParametersc46c7366cefb47f1220c481b29a240b7f8c9e7379ea091a44659ba5cd447844bS3VersionKey566E3647": Object {
      "Description": "S3 key for asset version \\"c46c7366cefb47f1220c481b29a240b7f8c9e7379ea091a44659ba5cd447844b\\"",
      "Type": "String",
    },
    "AssetParametersde5d53507ab3a110ffde286fac3114254159d7aa1f554b5543e27f5a8557b1cbArtifactHash14857245": Object {
      "Description": "Artifact hash for asset \\"de5d53507ab3a110ffde286fac3114254159d7aa1f554b5543e27f5a8557b1cb\\"",
      "Type": "String",
    },
    "AssetParametersde5d53507ab3a110ffde286fac3114254159d7aa1f554b5543e27f5a8557b1cbS3Bucket7DD7C704": Object {
      "Description": "S3 bucket for asset \\"de5d53507ab3a110ffde286fac3114254159d7aa1f554b5543e27f5a8557b1cb\\"",
      "Type": "String",
    },
    "AssetParametersde5d53507ab3a110ffde286fac3114254159d7aa1f554b5543e27f5a8557b1cbS3VersionKey169EA89B": Object {
      "Description": "S3 key for asset version \\"de5d53507ab3a110ffde286fac3114254159d7aa1f554b5543e27f5a8557b1cb\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "testConfigWithNodeDDA76C99": Object {
      "Properties": Object {
        "CompatibleRuntimes": Array [
          "nodejs14.x",
        ],
        "Content": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersde5d53507ab3a110ffde286fac3114254159d7aa1f554b5543e27f5a8557b1cbS3Bucket7DD7C704",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersde5d53507ab3a110ffde286fac3114254159d7aa1f554b5543e27f5a8557b1cbS3VersionKey169EA89B",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersde5d53507ab3a110ffde286fac3114254159d7aa1f554b5543e27f5a8557b1cbS3VersionKey169EA89B",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer configures AWS Node SDK initialization",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "testConfigWithNodePythonLibLayer75C81C17": Object {
      "Properties": Object {
        "CompatibleRuntimes": Array [
          "python3.8",
        ],
        "Content": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersc46c7366cefb47f1220c481b29a240b7f8c9e7379ea091a44659ba5cd447844bS3BucketE78D10C6",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersc46c7366cefb47f1220c481b29a240b7f8c9e7379ea091a44659ba5cd447844bS3VersionKey566E3647",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersc46c7366cefb47f1220c481b29a240b7f8c9e7379ea091a44659ba5cd447844bS3VersionKey566E3647",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer has boto config initialization and logging functions",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "testFunction483F4CBE": Object {
      "DependsOn": Array [
        "testFunctionServiceRoleFEC29B6F",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersbac4548d66295d0afd8c4a6ab48b825793fb3b080a587e52c65d66c0892896bdS3BucketEC06255A",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersbac4548d66295d0afd8c4a6ab48b825793fb3b080a587e52c65d66c0892896bdS3VersionKey9B645B6A",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersbac4548d66295d0afd8c4a6ab48b825793fb3b080a587e52c65d66c0892896bdS3VersionKey9B645B6A",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": Object {
          "Variables": Object {
            "AWS_SDK_USER_AGENT": "{ \\"customUserAgent\\": \\"AwsSolution/undefined/undefined\\" }",
          },
        },
        "Handler": "index.handler",
        "Layers": Array [
          Object {
            "Ref": "testConfigWithNodeDDA76C99",
          },
        ],
        "Role": Object {
          "Fn::GetAtt": Array [
            "testFunctionServiceRoleFEC29B6F",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "testFunctionServiceRoleFEC29B6F": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;

exports[`visting node python runtimes and adding aspects 1`] = `
Object {
  "Parameters": Object {
    "AssetParameters2b3fda8151a8e3c5e7c0a2d6684a5605333073b38037f3dcac197c1caff18c7aArtifactHashC4EFB9F4": Object {
      "Description": "Artifact hash for asset \\"2b3fda8151a8e3c5e7c0a2d6684a5605333073b38037f3dcac197c1caff18c7a\\"",
      "Type": "String",
    },
    "AssetParameters2b3fda8151a8e3c5e7c0a2d6684a5605333073b38037f3dcac197c1caff18c7aS3Bucket4F2A39F6": Object {
      "Description": "S3 bucket for asset \\"2b3fda8151a8e3c5e7c0a2d6684a5605333073b38037f3dcac197c1caff18c7a\\"",
      "Type": "String",
    },
    "AssetParameters2b3fda8151a8e3c5e7c0a2d6684a5605333073b38037f3dcac197c1caff18c7aS3VersionKey5BA2CFA2": Object {
      "Description": "S3 key for asset version \\"2b3fda8151a8e3c5e7c0a2d6684a5605333073b38037f3dcac197c1caff18c7a\\"",
      "Type": "String",
    },
    "AssetParametersc46c7366cefb47f1220c481b29a240b7f8c9e7379ea091a44659ba5cd447844bArtifactHashFBDA4305": Object {
      "Description": "Artifact hash for asset \\"c46c7366cefb47f1220c481b29a240b7f8c9e7379ea091a44659ba5cd447844b\\"",
      "Type": "String",
    },
    "AssetParametersc46c7366cefb47f1220c481b29a240b7f8c9e7379ea091a44659ba5cd447844bS3BucketE78D10C6": Object {
      "Description": "S3 bucket for asset \\"c46c7366cefb47f1220c481b29a240b7f8c9e7379ea091a44659ba5cd447844b\\"",
      "Type": "String",
    },
    "AssetParametersc46c7366cefb47f1220c481b29a240b7f8c9e7379ea091a44659ba5cd447844bS3VersionKey566E3647": Object {
      "Description": "S3 key for asset version \\"c46c7366cefb47f1220c481b29a240b7f8c9e7379ea091a44659ba5cd447844b\\"",
      "Type": "String",
    },
    "AssetParametersde5d53507ab3a110ffde286fac3114254159d7aa1f554b5543e27f5a8557b1cbArtifactHash14857245": Object {
      "Description": "Artifact hash for asset \\"de5d53507ab3a110ffde286fac3114254159d7aa1f554b5543e27f5a8557b1cb\\"",
      "Type": "String",
    },
    "AssetParametersde5d53507ab3a110ffde286fac3114254159d7aa1f554b5543e27f5a8557b1cbS3Bucket7DD7C704": Object {
      "Description": "S3 bucket for asset \\"de5d53507ab3a110ffde286fac3114254159d7aa1f554b5543e27f5a8557b1cb\\"",
      "Type": "String",
    },
    "AssetParametersde5d53507ab3a110ffde286fac3114254159d7aa1f554b5543e27f5a8557b1cbS3VersionKey169EA89B": Object {
      "Description": "S3 key for asset version \\"de5d53507ab3a110ffde286fac3114254159d7aa1f554b5543e27f5a8557b1cb\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "testConfigWithNodeDDA76C99": Object {
      "Properties": Object {
        "CompatibleRuntimes": Array [
          "nodejs14.x",
        ],
        "Content": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersde5d53507ab3a110ffde286fac3114254159d7aa1f554b5543e27f5a8557b1cbS3Bucket7DD7C704",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersde5d53507ab3a110ffde286fac3114254159d7aa1f554b5543e27f5a8557b1cbS3VersionKey169EA89B",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersde5d53507ab3a110ffde286fac3114254159d7aa1f554b5543e27f5a8557b1cbS3VersionKey169EA89B",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer configures AWS Node SDK initialization",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "testConfigWithNodePythonLibLayer75C81C17": Object {
      "Properties": Object {
        "CompatibleRuntimes": Array [
          "python3.8",
        ],
        "Content": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersc46c7366cefb47f1220c481b29a240b7f8c9e7379ea091a44659ba5cd447844bS3BucketE78D10C6",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersc46c7366cefb47f1220c481b29a240b7f8c9e7379ea091a44659ba5cd447844bS3VersionKey566E3647",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersc46c7366cefb47f1220c481b29a240b7f8c9e7379ea091a44659ba5cd447844bS3VersionKey566E3647",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer has boto config initialization and logging functions",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "testFunction483F4CBE": Object {
      "DependsOn": Array [
        "testFunctionServiceRoleFEC29B6F",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters2b3fda8151a8e3c5e7c0a2d6684a5605333073b38037f3dcac197c1caff18c7aS3Bucket4F2A39F6",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters2b3fda8151a8e3c5e7c0a2d6684a5605333073b38037f3dcac197c1caff18c7aS3VersionKey5BA2CFA2",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters2b3fda8151a8e3c5e7c0a2d6684a5605333073b38037f3dcac197c1caff18c7aS3VersionKey5BA2CFA2",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": Object {
          "Variables": Object {
            "AWS_SDK_USER_AGENT": "{ \\"user_agent_extra\\": \\"AwsSolution/undefined/undefined\\" }",
          },
        },
        "Handler": "handler",
        "Layers": Array [
          Object {
            "Ref": "testConfigWithNodePythonLibLayer75C81C17",
          },
        ],
        "Role": Object {
          "Fn::GetAtt": Array [
            "testFunctionServiceRoleFEC29B6F",
            "Arn",
          ],
        },
        "Runtime": "python3.8",
      },
      "Type": "AWS::Lambda::Function",
    },
    "testFunctionServiceRoleFEC29B6F": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;
